upload day 1 work

--- a/Midterm/Midterm.ipynb
+++ b/Midterm/Midterm.ipynb
@@ -10,12 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "cudagpu",
-   "display_name": "cudagpu"
+   "name": "Python 3.8.3 64-bit (conda)",
+   "display_name": "Python 3.8.3 64-bit (conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "be2e7877c44afa397199e9cfbcd571547135c18cd55cff007376fb6d8ac3a739"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -206,23 +211,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Collecting ortools\n  Downloading ortools-8.0.8283-cp38-cp38-win_amd64.whl (40.8 MB)\nRequirement already satisfied: six>=1.10 in c:\\users\\joshu\\anaconda3\\lib\\site-packages (from ortools) (1.15.0)\nCollecting protobuf>=3.13.0\n  Downloading protobuf-3.13.0-py2.py3-none-any.whl (438 kB)\nRequirement already satisfied: setuptools in c:\\users\\joshu\\anaconda3\\lib\\site-packages (from protobuf>=3.13.0->ortools) (49.2.0.post20200714)\nInstalling collected packages: protobuf, ortools\nSuccessfully installed ortools-8.0.8283 protobuf-3.13.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install ortools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "location: (0, 'livestock'), value: 0.0\nlocation: (0, 'bio'), value: 0.0\nlocation: (1, 'livestock'), value: 0.0\nlocation: (1, 'bio'), value: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "from ortools.linear_solver import pywraplp\n",
     "\n",
     "solver = pywraplp.Solver.CreateSolver('SCIP')\n",
     "\n",
-    "class Shipment:\n",
-    "    def __init__(self, name, cost, profit):\n",
-    "        self.name = name\n",
-    "        self.cost = cost\n",
-    "        self.profit = profit\n",
+    "wearhouse_costs = [22500, 38000]\n",
+    "wearhouse_limits = [240, 360]\n",
     "\n",
-    "shipments = [Shipment('Livestock_1', 22500, 6), Shipment('Livestock_2', 22500, 6), Shipment('Biohazard_1', 38000, 8), Shipment('Biohazard_2', 38000, 8)]\n",
+    "ship_types = [\"livestock\",\"bio\"]\n",
     "\n",
-    "shipment_variables = [solver.IntVar(0,1, shipment.name) for shipment in shipments]\n"
+    "ship_profits = {\n",
+    "    \"livestock\": 6,\n",
+    "    \"bio\": 8,\n",
+    "}\n",
+    "\n",
+    "ship_startup = {\n",
+    "    \"livestock\": 22500,\n",
+    "    \"bio\": 38000,\n",
+    "}\n",
+    "\n",
+    "ship_hours = {\n",
+    "    (0, \"livestock\"): 104,\n",
+    "    (0, \"bio\"): 76,\n",
+    "    (1, \"livestock\"): 84,\n",
+    "    (1, \"bio\"): 46\n",
+    "}\n",
+    "\n",
+    "ship_locations = {(w, ship): solver.IntVar(0, 1, str(w) + \"_\" + ship) for w in range(len(wearhouse_costs)) for ship in ship_types}\n",
+    "ship_deltas = [solver.IntVar(0, 1, str(w)) for w in ship_types]\n",
+    "\n",
+    "solver.Maximize(sum([ship_locations[(w, ship)] * ship_profits[ship] * ship_hours[(0,ship)] for w in range(len(wearhouse_costs)) for ship in ship_types]) - \n",
+    "                sum([ship_deltas[i] * wearhouse_costs[i] for i in range(len(ship_deltas))]))\n",
+    "\n",
+    "# constraints\n",
+    "for w in range(len(wearhouse_costs)):\n",
+    "    for ship in ship_types:\n",
+    "        solver.Add(ship_locations[(w, ship)] <= ship_deltas[w])\n",
+    "    solver.Add(ship_locations[(w, 'livestock')] + ship_locations[(w, 'bio')] <= wearhouse_limits[w])\n",
+    "  \n",
+    "  \n",
+    "\n",
+    "\n",
+    "status = solver.Solve()\n",
+    "\n",
+    "if status == solver.OPTIMAL:\n",
+    "  for k in ship_locations.keys():\n",
+    "    print(f'location: {k}, value: {ship_locations[k].solution_value()}')\n"
    ]
   },
   {
@@ -239,7 +302,7 @@
     "\n",
     "#### 2(b) Objective function: \n",
     "\n",
-    "$max((104*6)L_1 + (76*8)B_1 + (84*6)L_2 + (46*8)B_2)$\n",
+    "$max((104*6)L_1 + (76*8)B_1 + (84*6)L_2 + (46*8)B_2 - (L_{cost1} + L_{cost2} + B_{cost1} + B_{cost2})$\n",
     "\n",
     "#### 2(c) Constraints:\n",
     "\n",
