--- a/Midterm/Midterm.ipynb
+++ b/Midterm/Midterm.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.7.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.3 64-bit (conda)",
-   "display_name": "Python 3.8.3 64-bit (conda)",
+   "name": "Python 3.7.9 64-bit (conda)",
+   "display_name": "Python 3.7.9 64-bit (conda)",
    "metadata": {
     "interpreter": {
-     "hash": "be2e7877c44afa397199e9cfbcd571547135c18cd55cff007376fb6d8ac3a739"
+     "hash": "8ec5006f94de5cf86f9c6e60bf6dc320ca84a34e4fb1ea7fa5541308c470ca8b"
     }
    }
   }
@@ -38,7 +38,7 @@
    "source": [
     "### 1(a) Suppose we run a Monte Carlo simulation and draw n samples uniformly from \\[ 0, 1 \\]. Let $x_i$ be the ith sample. Write the formula for the estimate of the integral of f(x).\n",
     "\n",
-    "integral of f(x) = $\\int_{0}^{0.5} 2-8x^{2}\\ dx + \\int_{0.5}^{1} 0\\ dx$"
+    "integral of f(x) = $\\int_{0}^{0.5} 2-8x^{2}\\ dx + \\int_{0.5}^{1} 0\\ dx = \\frac{0.5}{n}$"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -81,17 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Variance for random method: 0.0245\n",
-      "Variance for antithetic method: 0.0123\n",
-      "\n",
-      "The antithetic method does reduce the variance in the estimate.\n"
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "area_random() missing 3 required positional arguments: 'a', 'b', and 'n'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-c2c7121f9a75>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[0msamples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m \u001b[0mreults_random\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0marea_random\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msamples\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrials\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Variance for random method:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreults_random\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Variance for random method:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreults_random\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-25-c2c7121f9a75>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[0msamples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m \u001b[0mreults_random\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0marea_random\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msamples\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrials\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Variance for random method:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreults_random\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Variance for random method:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mround\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreults_random\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: area_random() missing 3 required positional arguments: 'a', 'b', and 'n'"
      ]
     }
    ],
@@ -105,22 +107,23 @@
     "    else: \n",
     "        return 0\n",
     "\n",
-    "def area_random(samples):\n",
+    "def area_random(samples, a, b, n):\n",
     "    count = 0\n",
     "    for _ in range(samples):\n",
-    "        x = random.random()\n",
-    "        count += f(x) > random.random()\n",
-    "        # else: count += 0 > random.random() would always be 0 so no code is needed\n",
-    "    return count / samples\n",
+    "        x = random.uniform(0,1)\n",
+    "        count += f(x) > random.uniform(0,1)\n",
+    "        # else: count += 0 > random.uniform() would always be 0 so no code is needed\n",
+    "    I = (float(b-a)/n)*count\n",
+    "    return I\n",
     "\n",
     "def area_antithetic(samples):\n",
     "    count = 0\n",
     "    for _ in range(samples//2):\n",
-    "        x = random.random()\n",
+    "        x = random.uniform(0,1)\n",
     "        antithetic = 1-x\n",
     "        if x <= 0.5:\n",
-    "            count += f(x) > random.random()\n",
-    "            count += f(antithetic) > random.random()\n",
+    "            count += f(x) > random.uniform(0,1)\n",
+    "            count += f(antithetic) > random.uniform(0,1)\n",
     "        # again, when x > 0.5 the area will always be 0; no else needed\n",
     "    return count / samples\n",
     "\n",
@@ -129,7 +132,7 @@
     "\n",
     "reults_random = [area_random(samples) for _ in range(trials)]\n",
     "print(\"Variance for random method:\", round(np.var(reults_random), 4))\n",
-    "\n",
+    "print(\"Variance for random method:\", round(np.mean(reults_random), 4))\n",
     "results_antithetic = [area_antithetic(samples) for _ in range(trials)]\n",
     "print(\"Variance for antithetic method:\", round(np.var(results_antithetic), 4))\n",
     "print()\n",
@@ -168,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Estimate for antithetic method: 0.22\nVariance for antithetic method: 0.0123\nEstimate for importance method: -2.03\nVariance for importance method: 236.4207\n\nThe importance sampling method is much worse. This is likely because the distributions do not overlap well. Using the distribution from 0.5 < x <= 1, we do not have a good representation of the distribution from 0 < x <= 0.5. The reason antithetic works much better is that for every sample it takes from the first interval [0,0.5] and samples from the second (0.5,1]. Since the distributions are so different on those intervals, the antithetic sampling gives a much better variance and estimate.\n"
+      "Estimate for antithetic method: 0.22\nVariance for antithetic method: 0.0123\nEstimate for importance method: nan\nVariance for importance method: nan\nnan\n\nThe importance sampling method is much worse. This is likely because the distributions do not overlap well. Using the distribution from 0.5 < x <= 1, we do not have a good representation of the distribution from 0 < x <= 0.5. The reason antithetic works much better is that for every sample it takes from the first interval [0,0.5] and samples from the second (0.5,1]. Since the distributions are so different on those intervals, the antithetic sampling gives a much better variance and estimate.\n"
      ]
     }
    ],
@@ -189,8 +192,8 @@
     "approx_mean = 0.75\n",
     "approx_var = 1\n",
     "\n",
-    "p_x = stats.norm(target_mean, target_var)\n",
-    "q_x = stats.norm(approx_mean, approx_var)\n",
+    "p_x = stats.uniform(target_mean, target_var)\n",
+    "q_x = stats.uniform(approx_mean, approx_var)\n",
     "\n",
     "trials = 1000\n",
     "\n",
@@ -218,7 +221,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Collecting ortools\n  Downloading ortools-8.0.8283-cp38-cp38-win_amd64.whl (40.8 MB)\nRequirement already satisfied: six>=1.10 in c:\\users\\joshu\\anaconda3\\lib\\site-packages (from ortools) (1.15.0)\nCollecting protobuf>=3.13.0\n  Downloading protobuf-3.13.0-py2.py3-none-any.whl (438 kB)\nRequirement already satisfied: setuptools in c:\\users\\joshu\\anaconda3\\lib\\site-packages (from protobuf>=3.13.0->ortools) (49.2.0.post20200714)\nInstalling collected packages: protobuf, ortools\nSuccessfully installed ortools-8.0.8283 protobuf-3.13.0\n"
+      "Collecting ortools\n  Downloading ortools-8.0.8283-cp38-cp38-win_amd64.whl (40.8 MB)\nRequirement already satisfied: six>=1.10 in c:\\users\\jwand\\anaconda3\\envs\\geo_env\\lib\\site-packages (from ortools) (1.15.0)\nCollecting protobuf>=3.13.0\n  Downloading protobuf-3.13.0-py2.py3-none-any.whl (438 kB)\nRequirement already satisfied: setuptools in c:\\users\\jwand\\anaconda3\\envs\\geo_env\\lib\\site-packages (from protobuf>=3.13.0->ortools) (49.6.0.post20201009)\nInstalling collected packages: protobuf, ortools\nSuccessfully installed ortools-8.0.8283 protobuf-3.13.0\n"
      ]
     }
    ],
@@ -228,14 +231,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "location: (0, 'livestock'), value: 0.0\nlocation: (0, 'bio'), value: 0.0\nlocation: (1, 'livestock'), value: 0.0\nlocation: (1, 'bio'), value: 0.0\n"
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-229e6d7c9681>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[0mwearhouse_deltas\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0msolver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIntVar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwearhouse_costs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m solver.Maximize(sum([ship_locations[(w, ship)] * ship_profits[ship] * ship_per_hour[(w,ship)] * ship_deltas[(w,ship)] for w in range(len(wearhouse_costs)) for ship in ship_types]) - \n\u001b[0m\u001b[0;32m     32\u001b[0m                 sum([ship_locations[w] * ship_startup[ship] for w in range(len(wearhouse_costs)) for ship in ship_types]))\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-14-229e6d7c9681>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[0mwearhouse_deltas\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0msolver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIntVar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mw\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwearhouse_costs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m solver.Maximize(sum([ship_locations[(w, ship)] * ship_profits[ship] * ship_per_hour[(w,ship)] * ship_deltas[(w,ship)] for w in range(len(wearhouse_costs)) for ship in ship_types]) - \n\u001b[0m\u001b[0;32m     32\u001b[0m                 sum([ship_locations[w] * ship_startup[ship] for w in range(len(wearhouse_costs)) for ship in ship_types]))\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\ortools\\linear_solver\\linear_solver_natural_api.py\u001b[0m in \u001b[0;36m__mul__\u001b[1;34m(self, cst)\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    116\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0m__mul__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 117\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mProductCst\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    118\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    119\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0m__rmul__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\ortools\\linear_solver\\linear_solver_natural_api.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, expr, coef)\u001b[0m\n\u001b[0;32m    177\u001b[0m       \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__coef\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcoef\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    178\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 179\u001b[1;33m       \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    180\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    181\u001b[0m   \u001b[1;32mdef\u001b[0m \u001b[0m__str__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: "
      ]
     }
    ],
@@ -259,33 +269,41 @@
     "    \"bio\": 38000,\n",
     "}\n",
     "\n",
-    "ship_hours = {\n",
+    "ship_per_hour = {\n",
     "    (0, \"livestock\"): 104,\n",
     "    (0, \"bio\"): 76,\n",
     "    (1, \"livestock\"): 84,\n",
     "    (1, \"bio\"): 46\n",
     "}\n",
     "\n",
-    "ship_locations = {(w, ship): solver.IntVar(0, 1, str(w) + \"_\" + ship) for w in range(len(wearhouse_costs)) for ship in ship_types}\n",
-    "ship_deltas = [solver.IntVar(0, 1, str(w)) for w in ship_types]\n",
+    "ship_locations = {(w, ship): solver.IntVar(0, wearhouse_limits[w], str(w) + \"_\" + ship) for w in range(len(wearhouse_costs)) for ship in ship_types}\n",
+    "ship_deltas = {(w, ship): solver.IntVar(0, 1, str(w) + \"_\" + ship) for w in range(len(wearhouse_costs)) for ship in ship_types}\n",
+    "wearhouse_deltas = [solver.IntVar(0, 1, str(w)) for w in range(len(wearhouse_costs))]\n",
     "\n",
-    "solver.Maximize(sum([ship_locations[(w, ship)] * ship_profits[ship] * ship_hours[(0,ship)] for w in range(len(wearhouse_costs)) for ship in ship_types]) - \n",
-    "                sum([ship_deltas[i] * wearhouse_costs[i] for i in range(len(ship_deltas))]))\n",
+    "# l1 + l2 <= deltas\n",
+    "\n",
+    "solver.Maximize(sum([ship_locations[(w, ship)] * ship_profits[ship] * ship_per_hour[(w,ship)] * ship_deltas[(w,ship)] for w in range(len(wearhouse_costs)) for ship in ship_types]) - \n",
+    "                sum([ship_locations[w] * ship_startup[ship] for w in range(len(wearhouse_costs)) for ship in ship_types]))\n",
     "\n",
     "# constraints\n",
     "for w in range(len(wearhouse_costs)):\n",
+    "    solver.Add(ship_locations[(w, 'livestock')]*ship_startup['livestock'] + ship_locations[(w, 'bio')]*ship_startup['bio']  <= wearhouse_limits[w])\n",
+    "    \n",
     "    for ship in ship_types:\n",
-    "        solver.Add(ship_locations[(w, ship)] <= ship_deltas[w])\n",
-    "    solver.Add(ship_locations[(w, 'livestock')] + ship_locations[(w, 'bio')] <= wearhouse_limits[w])\n",
-    "  \n",
-    "  \n",
+    "        solver.Add(ship_locations[(w, ship)] <= wearhouse_deltas[w])\n",
     "\n",
+    "# solver.Add(sum([ for w in len(range(wearhouse_costs)) for ship in ship_types]))\n",
+    "  \n",
+    "# l1 240 l2 360 b1 0 b2 0\n",
     "\n",
     "status = solver.Solve()\n",
     "\n",
     "if status == solver.OPTIMAL:\n",
-    "  for k in ship_locations.keys():\n",
-    "    print(f'location: {k}, value: {ship_locations[k].solution_value()}')\n"
+    "    for k in ship_locations.keys():\n",
+    "        print(f'location: {k}, value: {ship_locations[k].solution_value()}')\n",
+    "    for w in range(len(wearhouse_costs)):\n",
+    "        for ship in ship_types:\n",
+    "            print((w,ship), wearhouse_deltas[w].solution_value())\n"
    ]
   },
   {
@@ -314,6 +332,19 @@
     "if $L_2$ >= 1, then subtract 22500\n",
     "if $B_1$ >= 1, then subtract 38000\n",
     "if $B_2$ >= 1, then subtract 38000"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "#### 3(a) You are bored on an international flight with a deck of cards as your only entertainment. How many different ways can you deal 5 cards from the deck (aka dealing a hand)? Note: It does not matter what order you receive the cards. The same set of cards in a different order is the same hand.\n",
+    "\n",
+    "There are 13 different values of cards that can be of any suit:\n",
+    "$$\\begin{pmatrix}13 \\\\ 5\\end{pmatrix} = \\dfrac{13!}{5!(13-5)!} = 1287$$\n",
+    "There are 1287 different hands.\n",
+    "\n",
+    "#### 3(b) Later in the flight the passenger next to you suggests you play poker to pass the time. How many different ways can you deal two 5 card hands, one to each of you?"
    ],
    "cell_type": "markdown",
    "metadata": {}
