--- a/Projects/Project3/HealthcareGA2.ipynb
+++ b/Projects/Project3/HealthcareGA2.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,54 +99,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "### player class ###\n",
     "class Player:\n",
-    "    def __init__(self, starting_health, starting_enjoyment=None, starting_money=None, starting_I=None, starting_L=None):\n",
-    "        self.health = starting_health\n",
-    "\n",
-    "        if starting_enjoyment != None and starting_money != None and starting_I != None and starting_L != None:\n",
-    "            self.enjoyment = starting_enjoyment\n",
-    "            self.money = starting_money\n",
-    "            self.I_prop = starting_I\n",
-    "            self.L_prop = starting_L\n",
-    "        else:\n",
-    "            self.enjoyment = 0\n",
-    "            self.money = 0\n",
-    "            self.set_investments()\n",
-    "    \n",
-    "    \n",
-    "    def invest(self):\n",
-    "        L = self.L_prop * self.money\n",
-    "        I = self.I_prop * self.money\n",
-    "        self.money -= L\n",
-    "        self.money -= I\n",
-    "\n",
-    "        return I, L\n",
-    "\n",
-    "    def set_investments(self):\n",
-    "        self.L_prop = random.random()\n",
-    "        self.I_prop = 1 - self.L_prop"
+    "    def __init__(self, health, enjoyment, money, I_props, L_props, money_props):\n",
+    "        self.health = health\n",
+    "        self.enjoyment = enjoyment\n",
+    "        self.money = money\n",
+    "        self.I_props = I_props\n",
+    "        self.L_props = L_props\n",
+    "        self.money_props = money_props"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "### simulation functions ###\n",
     "\n",
     "# Harvesting\n",
-    "def harvest(players, M = 100, N = 100, W = 10, T = 100, v = 1, gamma = 1):\n",
+    "def harvest(health, M = 100, N = 100, W = 10, T = 100, v = 1, gamma = 1):\n",
     "    dots_per_cell = T / (M * W)\n",
     "\n",
-    "    for player in players:\n",
-    "        num_player_rows = M * (1 - (gamma * ((100 - player.health) / 100)))\n",
-    "        player.money = num_player_rows * W * dots_per_cell * v\n",
+    "    num_player_rows = M * (1 - (gamma * ((100 - health) / 100)))\n",
+    "    return num_player_rows * W * dots_per_cell * v\n",
     "        \n",
     "# Degeneragtion\n",
     "def degenerate(curr_period, P = 10):\n",
@@ -188,130 +169,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### GA functions ###\n",
-    "\n",
     "# generate population\n",
-    "def generate_players(starting_health, population_size):\n",
-    "    return [Player(starting_health) for _ in range(population_size)]\n",
-    "\n",
-    "def mutate_investments(player, prob):\n",
-    "    if random.random() < prob:\n",
-    "        mutate_prop = random.uniform(0, 0.2)\n",
-    "\n",
-    "        if random.random() < 0.5:\n",
-    "            if player.I_prop + mutate_prop > 1:\n",
-    "                player.I_prop = 1\n",
-    "            else:\n",
-    "                player.I_prop += mutate_prop\n",
-    "            if player.L_prop - mutate_prob < 0:\n",
-    "                player.L_prop = 0\n",
-    "            else:\n",
-    "                player.L_prop -= mutate_prop\n",
-    "        \n",
-    "        else:\n",
-    "            if player.L_prop + mutate_prop > 1:\n",
-    "                player.L_prop = 1\n",
-    "            else:\n",
-    "                player.L_prop += mutate_prop\n",
-    "            if player.I_prop - mutate_prob < 0:\n",
-    "                player.I_prop = 0\n",
-    "            else:\n",
-    "                player.I_prop -= mutate_prop\n",
-    "    return player\n",
-    "\n",
-    "# generate children\n",
-    "def generate_children(players, num_children, mutate_prob):\n",
-    "    children = []\n",
-    "\n",
-    "    for _ in range(num_children):\n",
-    "        parent_1, parent_2 = random.sample(players, 2)\n",
-    "        I_prop = 0\n",
-    "        L_prop = 0\n",
-    "\n",
-    "        if random.random() < 0.5:\n",
-    "            L_prop = parent_2.L_prop\n",
-    "            if parent_1.I_prop + parent_2.L_prop <= 1:\n",
-    "                I_prop = parent_1.I_prop\n",
-    "                \n",
-    "            child = Player(parent_1.health, parent_2.enjoyment, parent_1.money, I_prop, L_prop)\n",
-    "            children.append(mutate_investments(child, mutate_prob))\n",
-    "        else:\n",
-    "            L_prop = parent_1.L_prop\n",
-    "            if parent_2.I_prop + parent_1.L_prop <= 1:\n",
-    "                I_prop = parent_2.I_prop\n",
-    "            child = Player(parent_2.health, parent_1.enjoyment, parent_2.money, I_prop, L_prop)\n",
-    "            children.append(mutate_investments(child, mutate_prob))\n",
-    "            \n",
-    "    return children\n",
-    "\n",
-    "# fitness function\n",
-    "def investment_fitness(player, curr_period):\n",
-    "    score = 0\n",
-    "\n",
-    "    if min_health < player.health - degenerate(curr_period) and player.I_prop < player.L_prop:\n",
-    "        score -= 250\n",
-    "    \n",
-    "    score += player.enjoyment\n",
-    "\n",
-    "    return score\n",
-    "\n",
-    "# tournament survival\n",
-    "def reduce_players(players, population_size, curr_period):\n",
-    "    new_players = []\n",
-    "\n",
+    "def generate_players(starting_health, population_size, num_periods):\n",
+    "    players = []\n",
     "    for _ in range(population_size):\n",
-    "        player_1, player_2 = random.sample(players, 2)\n",
+    "        health_list = [starting_health]\n",
+    "        enjoyment_list = [0]\n",
+    "        money_list = [harvest(starting_health)]\n",
+    "        L_prop_list = [random.random()]\n",
+    "        I_prop_list = [random.uniform(0, L_prop_list[0])]\n",
+    "        money_prop_list = [1 - (I_prop_list[0] + L_prop_list[0])]\n",
     "\n",
-    "        if investment_fitness(player_1, curr_period) > investment_fitness(player_2, curr_period):\n",
-    "            new_players.append(player_1)\n",
-    "        else:\n",
-    "            new_players.append(player_2)\n",
-    "    return new_players\n",
+    "        # simulate all periods for player\n",
+    "        # ignore first period\n",
+    "        for i in range(num_periods-1):\n",
     "\n",
-    "# iterate the GA\n",
-    "def ga_iteration(players, curr_period, mutate_prob, population_size):\n",
-    "    # print(f\"Period {curr_period+1}:\")\n",
-    "    harvest(players)\n",
-    "    \n",
-    "    for player in players:\n",
-    "        if min_health < (player.health - degenerate(curr_period)):\n",
-    "            player.health -= degenerate(curr_period)\n",
-    "        else:\n",
-    "            player.health = 0\n",
+    "            if health_list[i] > min_health:\n",
+    "                L_prop = round(random.random(),2)\n",
+    "                int(100*L_prop)\n",
+    "                I_prop = random.randint(0, int(100*L_prop)) / 100\n",
+    "                money_prop = 1 - (L_prop + I_prop)\n",
     "\n",
-    "    invest_pop(players)\n",
+    "                enjoyment_list.append(enjoyment_list[i] + enjoyment(L_prop * money_list[i], health_list[i]))\n",
+    "                money_list.append((money_list[i] * money_prop) + harvest(i + 1))\n",
     "\n",
-    "    children = generate_children(players, num_children, mutate_prob)\n",
-    "    new_players = reduce_players(players + children, population_size, curr_period)\n",
+    "                new_health = health_list[i] - degenerate(i+1) + regenerate(I_prop, health_list[i])\n",
+    "                if new_health > min_health:\n",
+    "                    health_list.append(new_health)\n",
+    "                else:\n",
+    "                    health_list.append(0)\n",
     "\n",
-    "    return new_players"
+    "                L_prop_list.append(L_prop)\n",
+    "                I_prop_list.append(I_prop)\n",
+    "                money_prop_list.append(money_prop)\n",
+    "            \n",
+    "            else:\n",
+    "                enjoyment_list.append(enjoyment_list[i])\n",
+    "                health_list.append(health_list[i])\n",
+    "                money_list.append(money_list[i])\n",
+    "\n",
+    "                L_prop_list.append(0)\n",
+    "                I_prop_list.append(0)\n",
+    "                money_prop_list.append(0)\n",
+    "            \n",
+    "        players.append(Player(health_list, enjoyment_list, money_list, I_prop_list, L_prop_list, money_prop_list))\n",
+    "    return players\n",
+    "\n",
+    "# helper function to print players\n",
+    "def print_players(players):\n",
+    "    data = [(player.health, player.enjoyment, player.money, player.I_props, player.L_props, player.money_props) for player in players]\n",
+    "    print(np.array(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "    H  -   LE   -   I  -   L\n[[  0.   727.6    0.     0.61]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.37   0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.52   0.48]\n [  0.   727.6    0.37   0.63]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.52   0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   682.34   0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.52   0.48]\n [  0.   727.6    0.52   0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   682.34   0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.52   0.48]\n [  0.   727.6    0.     0.61]\n [  0.   727.6    0.     0.61]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.52   0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.61]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   682.34   0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.52   0.48]\n [  0.   727.6    0.     0.48]\n [  0.   682.34   0.     0.48]\n [  0.   727.6    0.37   0.63]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.52   0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]\n [  0.   727.6    0.     0.48]]\n"
+      "[[[   70.      59.      47.      34.      20.       5.       0.\n       0.       0.       0.  ]\n  [    0.     102.36   266.38 -2321.17 -2262.64 -2263.02 -2260.01\n   -2260.01 -2260.01 -2260.01]\n  [   70.      54.2    -34.31    27.71    -0.16     5.06     5.85\n       5.85     5.85     5.85]\n  [    0.34     0.03     0.79     0.86     0.47     0.57     0.09\n       0.       0.       0.  ]\n  [    0.69     0.21     0.88     0.86     0.68     0.83     0.94\n       0.       0.       0.  ]\n  [   -0.03     0.76    -0.67    -0.72    -0.15    -0.4     -0.03\n       0.       0.       0.  ]]\n\n [[   70.      59.      47.      34.      20.       5.       0.\n       0.       0.       0.  ]\n  [    0.      72.     244.27   235.18   246.25   246.35   250.9\n     250.9    250.9    250.9 ]\n  [   70.      57.      -1.42     3.01     3.37     8.3      0.27\n       0.27     0.27     0.27]\n  [    0.01     0.07     0.11     0.11     0.41     0.01     0.75\n       0.       0.       0.  ]\n  [    0.07     0.13     0.95     0.9      0.8      0.01     0.94\n       0.       0.       0.  ]\n  [    0.92     0.8     -0.06    -0.01    -0.21     0.98    -0.69\n       0.       0.       0.  ]]]\n"
      ]
     }
    ],
    "source": [
-    "players = generate_players(starting_health, population_size)\n",
+    "players = generate_players(starting_health, 2, periods)\n",
     "\n",
-    "curr_pop = players\n",
-    "for curr_period in range(10):\n",
-    "    curr_pop = ga_iteration(curr_pop, curr_period, mutate_prob, population_size)\n",
+    "print_players(players)\n",
+    "# curr_pop = players\n",
+    "# for curr_period in range(10):\n",
+    "#     curr_pop = ga_iteration(curr_pop, curr_period, mutate_prob, population_size)\n",
     "\n",
-    "print_players(curr_pop)"
+    "# print_players(curr_pop)"
    ]
   }
  ]
