--- a/Projects/Project3/HealthcareGA2.ipynb
+++ b/Projects/Project3/HealthcareGA2.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.7.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,12 +111,19 @@
     "        self.money = money\n",
     "        self.I_props = I_props\n",
     "        self.L_props = L_props\n",
-    "        self.money_props = money_props"
+    "        self.money_props = money_props\n",
+    "    \n",
+    "    def update_values(self):\n",
+    "        for i in range(len(health)-1):\n",
+    "            curr_period = i + 1\n",
+    "            self.health[curr_period] = self.health[i] - degenerate(curr_period) + regenerate(I_prop * self.money[i], self.health[i])\n",
+    "            self.enjoyment = self.enjoyment[i] + enjoyment(self.L_props[curr_period] * self.money[i], self.health[i])\n",
+    "            self.money = (money_list[i] * money_prop) + harvest(curr_period)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,24 +187,28 @@
     "        health_list = [starting_health]\n",
     "        enjoyment_list = [0]\n",
     "        money_list = [harvest(starting_health)]\n",
-    "        L_prop_list = [random.random()]\n",
-    "        I_prop_list = [random.uniform(0, L_prop_list[0])]\n",
-    "        money_prop_list = [1 - (I_prop_list[0] + L_prop_list[0])]\n",
+    "\n",
+    "        L_prop_list = [0]\n",
+    "        I_prop_list = [0]\n",
+    "        money_prop_list = [0]\n",
     "\n",
     "        # simulate all periods for player\n",
     "        # ignore first period\n",
     "        for i in range(num_periods-1):\n",
-    "\n",
     "            if health_list[i] > min_health:\n",
     "                L_prop = round(random.random(),2)\n",
-    "                int(100*L_prop)\n",
-    "                I_prop = random.randint(0, int(100*L_prop)) / 100\n",
+    "                I_prop = 0\n",
+    "                try:\n",
+    "                    I_prop = random.randint(0, int(99-(100*L_prop))) / 100\n",
+    "                except:\n",
+    "                    pass\n",
     "                money_prop = 1 - (L_prop + I_prop)\n",
+    "                \n",
     "\n",
     "                enjoyment_list.append(enjoyment_list[i] + enjoyment(L_prop * money_list[i], health_list[i]))\n",
     "                money_list.append((money_list[i] * money_prop) + harvest(i + 1))\n",
     "\n",
-    "                new_health = health_list[i] - degenerate(i+1) + regenerate(I_prop, health_list[i])\n",
+    "                new_health = health_list[i] - degenerate(i+1) + regenerate(I_prop * money_list[i], health_list[i])\n",
     "                if new_health > min_health:\n",
     "                    health_list.append(new_health)\n",
     "                else:\n",
@@ -219,6 +230,16 @@
     "        players.append(Player(health_list, enjoyment_list, money_list, I_prop_list, L_prop_list, money_prop_list))\n",
     "    return players\n",
     "\n",
+    "# mutate function\n",
+    "def mutate_player(player, prob):\n",
+    "    if random.random() < prob:\n",
+    "        mutate_prop = random.uniform(0, 0.2)\n",
+    "        if random.random() < 0.5:\n",
+    "            for i in range(len(player.I_props)):\n",
+    "                valid = player.I_props[i] + mutate_prop <= 1\n",
+    "                player.I_props[i] = player.I_props[i] + mutate_prop if valid else 1\n",
+    "\n",
+    "\n",
     "# helper function to print players\n",
     "def print_players(players):\n",
     "    data = [(player.health, player.enjoyment, player.money, player.I_props, player.L_props, player.money_props) for player in players]\n",
@@ -227,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[[   70.      59.      47.      34.      20.       5.       0.\n       0.       0.       0.  ]\n  [    0.     102.36   266.38 -2321.17 -2262.64 -2263.02 -2260.01\n   -2260.01 -2260.01 -2260.01]\n  [   70.      54.2    -34.31    27.71    -0.16     5.06     5.85\n       5.85     5.85     5.85]\n  [    0.34     0.03     0.79     0.86     0.47     0.57     0.09\n       0.       0.       0.  ]\n  [    0.69     0.21     0.88     0.86     0.68     0.83     0.94\n       0.       0.       0.  ]\n  [   -0.03     0.76    -0.67    -0.72    -0.15    -0.4     -0.03\n       0.       0.       0.  ]]\n\n [[   70.      59.      47.      34.      20.       5.       0.\n       0.       0.       0.  ]\n  [    0.      72.     244.27   235.18   246.25   246.35   250.9\n     250.9    250.9    250.9 ]\n  [   70.      57.      -1.42     3.01     3.37     8.3      0.27\n       0.27     0.27     0.27]\n  [    0.01     0.07     0.11     0.11     0.41     0.01     0.75\n       0.       0.       0.  ]\n  [    0.07     0.13     0.95     0.9      0.8      0.01     0.94\n       0.       0.       0.  ]\n  [    0.92     0.8     -0.06    -0.01    -0.21     0.98    -0.69\n       0.       0.       0.  ]]]\n"
+      "[[[ 70.    66.    54.    41.    27.    12.     0.     0.     0.     0.  ]\n  [  0.   155.7  175.77 184.17 189.81 200.16 210.49 210.49 210.49 210.49]\n  [ 70.     5.9    3.36   3.91   6.85   8.77   6.79   6.79   6.79   6.79]\n  [  0.07   0.51   0.39   0.4    0.02   0.03   0.08   0.     0.     0.  ]\n  [  0.64   0.42   0.38   0.33   0.25   0.42   0.83   0.     0.     0.  ]\n  [  0.29   0.07   0.23   0.27   0.73   0.55   0.09   0.     0.     0.  ]]\n\n [[ 70.    64.    52.    39.    25.    10.     0.     0.     0.     0.  ]\n  [  0.   108.84 213.89 263.58 266.2  266.6  271.09 271.09 271.09 271.09]\n  [ 70.    26.9    8.73   3.35   5.54   7.77   8.49   8.49   8.49   8.49]\n  [  0.01   0.4    0.1    0.01   0.4    0.48   0.24   0.     0.     0.  ]\n  [  0.85   0.23   0.65   0.95   0.14   0.02   0.44   0.     0.     0.  ]\n  [  0.14   0.37   0.25   0.04   0.46   0.5    0.32   0.     0.     0.  ]]]\n"
      ]
     }
    ],
